# DoMPC-Acados-Coupler

./: .coveragerc  .gitignore  README.md  requirements_dev.txt  setup.cfg  tox.ini
dompcacadoscoupler/: __init__.py  acados_mpc_for_dompc.py  acados_simulator_for_dompc.py  model_converter.py
dompcacadoscoupler/misc/: datetime_helper.py  path_helper.py
dompcacadoscoupler/mpc/: mpc_constraint_handler.py  mpc_initializer.py  mpc_objective_handler.py  mpc_option_handler.py  mpc_scaler.py
dompcacadoscoupler/scripts/: run_dynaovr_with_acados_mpc.py  run_dynaovr_with_acados_simulator.py
dompcacadoscoupler/tests/: conftest.py  test_acados_initialization.py  test_coupler_for_mpc.py  test_coupler_for_simulation.py  test_coupler_with_pendulum.py  test_coupler_with_pendulum_2.py  test_coupler_with_simple_model.py  test_coupler_with_simple_pendulum.py  test_dynaovr_with_acados_mpc.py  test_dynaovr_with_acados_simulator.py  test_minimal_dae_example.py  test_minimal_interpolant_example.py  test_minimal_mpc_example.py  test_mpc_with_erk.py  test_mpc_with_rterm.py  test_mpc_with_simple_array_model.py  test_path_helper.py  test_simulation_with_simple_model.py
