[metadata]
name=dompcacadoscoupler
version=0.1.0
author=David Zanger
author_email=david.zanger@dlr.de
long_description=file: README.md
download_url=https://gitlab.dlr.de/soltocon/dompc-acados-coupler
classifiers =
    Programming Language :: Python :: 3
[options]
install_requires=
    numpy
    do_mpc
    casadi
    colorama
    termcolor
    scipy

packages = find:

[options.packages.find]
# This section is optional
# Each entry in this section is optional, and if not specified, the default values are:
# `where=.`, `include=*` and `exclude=` (empty).
include=dompcacadoscoupler*
exclude=examples*
    tools*
    docs*
    dompcacadoscoupler.tests*
